data/derived/comb/progs/unify/prog5035.ml.out
Characters 63-75:
  | x -> mulByDigit i-1 (bigAdd l l);;
         ^^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
